--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -22,30 +22,39 @@
 /* 轮播 */
  swiper{
    height: 350rpx;
+   margin-bottom: 30rpx
 } 
 swiper .slide-image{
   width: 100%;
   height: 370rpx;
 }
 /* 电台,热门歌单 */
+.song_list{
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: space-between;
+}
 .list_title{
   display: block;
   margin-bottom: 32rpx;
   font-size: 36rpx;
 }
-
 .song_list .song_item{
-  float: left;
-  width: calc(50% - 10rpx); 
+  width: 350rpx;
   background-color: #fff;
   margin-bottom: 45rpx;
 }
-.song_list .song_item:nth-child(2n){
-  margin-left: 20rpx; 
-} 
 .song_list .song_item image{
+  position: relative;
   width: 100%;
   height: 350rpx; 
+}
+.song_list .song_item image .play_icon{
+  position: absolute;
+  right: 10rpx;
+  bottom: 10rpx;
+  width: 50rpx;
+  height: 50rpx;
 }
 .song_list .song_item .item_title{
   display: block;
@@ -65,32 +74,32 @@ swiper .slide-image{
 
 
 /* 排行榜 */
-.search_box .topic_item{
+.toplist_box .topic_item{
   margin-bottom: 20rpx;
   background-color: #fff;
   display: flex;
   position: relative
 }
-.search_box .topic_item .arrow{
+.toplist_box .topic_item .arrow{
   position: absolute;
   right: 15rpx;
   top: 50%;
   transform: translateY(-50%);
 }
-.search_box .topic_item .topic_pic{
+.toplist_box .topic_item .topic_pic{
   flex: none;
   width: 200rpx;
   height: 200rpx;
 }
-.search_box .topic_item .topic_pic image{
+.toplist_box .topic_item .topic_pic image{
    width:100%; 
    height: 100%
 }
-.search_box .topic_item .topic_info{
+.toplist_box .topic_item .topic_info{
    margin: 10rpx 30rpx;
    overflow: hidden;
 }
-.search_box .topic_item .topic_info .title{
+.toplist_box .topic_item .topic_info .title{
   font-size: 32rpx;
   display: block;
   margin-bottom: 10rpx;
@@ -98,7 +107,7 @@ swiper .slide-image{
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.search_box .topic_item .topic_info .song_info{
+.toplist_box .topic_item .topic_info .song_info{
   font-size: 28rpx;
   color: #7f7f7f;
   line-height: 46rpx;
@@ -106,7 +115,7 @@ swiper .slide-image{
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.search_box .topic_item .topic_info .song_info .song_name{
+.toplist_box .topic_item .topic_info .song_info .song_name{
   margin-left: 20rpx;
   color: #000;
 }
@@ -116,4 +125,142 @@ swiper .slide-image{
   text-align: center;
   display: block;
   margin: 45rpx 0;
+}
+
+/* 搜索 */
+
+ .search_box{
+  font-size: 32rpx;
+  display: flex; 
+  padding: 20rpx;
+}
+.search_box .search_inner{
+  display: flex;
+  background-color: #fff;
+  padding: 20rpx;
+  border-radius: 10rpx;
+  width: 75%; 
+  /* width: 100%; */
+}
+.search_box .search_inner icon{
+  margin-right:20rpx;
+}
+.search_box .search_inner .search{
+  padding: 0;
+  width: 100%;
+}
+.search_box .search_cancel{
+  /* display: none; */
+  display: block;
+  align-self: center;
+  padding:25rpx;
+} 
+.hot_keys_box{
+  background-color: #fff;
+  padding: 30rpx;
+  overflow: hidden;
+}
+ 
+.hot_keys_box .caption{
+  display: block;
+  font-weight: bold;
+  color: #676767;
+}
+.hot_keys_box .hot_keys > view{
+  float: left;
+  padding: 15rpx;
+  margin-top: 25rpx;
+  border-radius: 999rpx;
+  border: 2rpx solid #676767;
+  font-size: 30rpx;
+}
+.hot_keys_box .hot_keys  view + view{
+  margin-left: 25rpx;
+}
+.hot_keys_box .hot_keys .cur_hot_key{
+  border-color: orangered;
+  color: orangered;
+}
+/* 搜索结果弹窗 */
+.result_box{
+  background-color: #fff;
+}
+.result_box .result_item{
+  padding: 15rpx 30rpx;
+  border-top: 2rpx solid #ccc;
+  display: flex;
+}
+.result_box .result_item .result_icon{
+  width: 50rpx;
+  height: 50rpx;
+  /* background-color: pink; */
+  background-image: url("../../images/icon-music.png");
+  background-repeat: no-repeat;
+  background-size:100%;
+  align-self: center;
+  margin-right: 30rpx;
+}
+.result_box .result_item .result_info text{
+  display: block;
+}
+.result_box .result_item .result_info .song_name{
+  color: #000;
+  font-size: 36rpx;
+}
+.result_box .result_item .result_info .singer{
+  font-size: 24rpx;
+  line-height: 36rpx;
+  color: #666;
+}
+/* 历史记录弹窗 */
+.gg_box{
+  background-color: #fff;
+}
+.gg_box .gg{
+  display: flex;
+  justify-content: space-between;
+  padding: 20rpx 30rpx;
+  border-top: 2rpx solid #ccc;
+  color: #000;
+  font-size: 36rpx;
+}
+ .gg_box .gg .txt{
+   flex: auto;
+} 
+.gg_box .gg .clock_icon{
+  width: 40rpx;
+  height: 40rpx;
+  background-image: url("../../images/clock_ic.png");
+  background-size:cover;
+  margin-right: 40rpx;
+}
+.gg_box .gg .delete_icon{
+  width: 40rpx;
+  height: 40rpx;
+  position: relative;
+}
+.gg_box .gg .delete_icon::before {
+    position: absolute;
+    top: 16rpx;
+    width: 34rpx;
+    height: 2rpx;
+    content: "";
+    background: rgba(0,0,0,0.6);
+    transform: rotate(45deg);
+}
+.gg_box .gg .delete_icon::after {
+    position: absolute;
+    left: 16rpx;
+    width: 2rpx;
+    height: 34rpx;
+    content: "";
+    background: rgba(0,0,0,.6);
+    transform: rotate(45deg);
+}
+.gg_box .clearlog{
+  display: block;
+  text-align: center;
+  font-size: 27rpx;
+  line-height: 60rpx;
+  color: #31c27c;
 }
