--- a/pages/top_song_list/top_song_list.wxss
+++ b/pages/top_song_list/top_song_list.wxss
@@ -6,10 +6,11 @@
   border-bottom: 1rpx solid #ccc;
   width: 100%;
   height: 750rpx;
-  /* background-color: pink; */
+   /* background-color: #020;  */
 }
 .head_box .head_title{
   position: absolute;
+  z-index: 3;
   bottom: 0;
   padding: 0 40rpx 60rpx 40rpx;
   width: 100%;
@@ -33,6 +34,23 @@
 .head_box .head_title .time{
   font-size: 30rpx;
 }
+.head_box .mask{
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 750rpx;
+  background: linear-gradient(to bottom,transparent,#000);
+}
+.head_box .mask1{
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 750rpx;
+}
 
 /* 歌曲列表 */
 .song_item{
@@ -48,8 +66,10 @@
   border-bottom: 1rpx solid #ccc;
   overflow: hidden;
 }
-.song_item .song_info text{
+.song_item .song_info .song_name{
   display: block;
+  font-size: 38rpx;
+  line-height: 57rpx;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -58,8 +78,7 @@
 .song_item .song_info .singer{
   font-size: 30rpx;
   color: #ccc;
-}
-.song_item .song_info .song_name{
-  font-size: 38rpx;
-  line-height: 57rpx;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
