--- a/pages/play_song/play_song.wxml
+++ b/pages/play_song/play_song.wxml
@@ -1,6 +1,7 @@
 
 <view class="container">
   <view class="main_box">
+    <!-- 头部信息 -->
     <view class="play_header">
       <image class="header_album" src="{{imgPath}}"></image>
       <view class="play_header_txt">
@@ -11,21 +12,21 @@
       </view>
       <view class="icon" bindtap="playMusic"  style="{{imgoff ? 'background-position-y:-338rpx' : 'background-position-y:-405rpx'}}"></view>
     </view>
-
-    <view class="lyric_box">
-      <scroll-view scroll-y scroll-top="{{scrollTop}}" scroll-with-animation="true" style="height: 672rpx;">
-        <block wx:for="{{lyric}}">
-          <text class="{{item.time <= currentPosition && item.endTime > currentPosition ? 'cur':''}}">{{item.clause}}</text>
+    <!-- 歌词 -->
+    <view class="lyric_box" bindtouchstart="startJump" bindtouchmove="moveJump" bindtouchend="endJump">
+      <scroll-view scroll-y scroll-top="{{scrollTop}}" scroll-with-animation="true" style="height: 590rpx;">
+        <block wx:for="{{lyric}}"  wx:key="lrc">
+          <text class="{{currentPosition >= item.startTime && item.endTime >= currentPosition ? 'cur':''}}">{{item.clause}}</text>
         </block>
       </scroll-view>
     </view>
   </view>
 
   <view class="play_footer">
-    <view class="icon_list icon"></view>
-    <view class="icon_like icon"></view>
+    <view class="icon_list icon" catchtap="openListBtn" ></view>
+    <view class="icon_like icon" bindtap="weixinOpen"></view>
     <view class="control">
-      <view class="start time">{{currentmin<10?'0':''}}{{currentmin}}:{{currentPosition<10?'0':''}}{{currentPosition}}</view>
+      <view class="start time">{{currentmin<10?'0':''}}{{currentmin}}:{{currentsec<10?'0':''}}{{currentsec}}</view>
       <view class="bar_farther"  bindtap="bindtap" bindtouchmove="bartouchmove" bindtouchstart="bartouchstart" bindtouchend="bartouchend">
         <view class="bar">
           <view class="bar_child" style="width:{{width}}"></view>
@@ -35,11 +36,47 @@
     </view>
     <view class="download_btn">
       <!-- <image src=""></image> -->
-      <text class="download_btn_txt" bindtap="downLoadMusic">免费下载这首歌</text>
+      <text class="download_btn_txt" bindtap="weixinOpen">哈哈！点一下看看呗！</text>
     </view>
   </view>
+
+  <!-- 歌词列表弹窗 -->
+  <view class="song_list_container" style="transform: translateY({{listoff?'0':'1600rpx'}});">
+    <!-- 透明的关闭按钮 -->
+    <view bindtap="closeListBtn" class="close_list_btn"></view>
+    <view class="song_list_box">
+      <view class="title">
+        <view class="mode_btn">
+          <!-- <image src="#"></image> -->
+          <text class="list_title">列表循环</text>
+          <text class="list_num">({{songlist.length}})</text>
+        </view>
+      </view>
+      <view class="song_list">
+        <scroll-view scroll-y scroll-top="{{listScrollTop}}" scroll-with-animation="true" style="height: 600rpx;">
+          <view class="oSong" bindtap="bindSong" data-idss="{{songIndex}}" wx:for-item="song" wx:for-index="songIndex" wx:for="{{songlist}}"  wx:key="slt">
+            <text class="{{songIndex == key ? 'cur':''}} txt">{{song.data.songname||song.songname}}</text>
+            <text class="{{songIndex == key ? 'cur':''}} small_txt" wx:for="{{song.data.singer||song.singer}}" wx:key="sger">{{index==0?" - ":""}}{{item.name}}{{index<song.singer.length-1?"/":""}}</text>
+            <view class="list_play_icon {{songIndex == key ? 'cur':''}}"></view>
+          </view>
+        </scroll-view>
+      </view>
+    </view>
+  </view>
+
+  <!-- 微信二维码弹窗 -->
+  <view class="weixin_box" style="display:{{weixinoff?'block;':'none;'}}">
+    <view class="weixin">
+      <view class="weixin_close" bindtap="weixinClose"></view>
+      <text class="title1">期待~ </text>
+      <text class="title2">喜欢音乐的你加我哦！</text>
+      <image class="weixin_pic" src="../../images/weixin.jpg"></image>
+    </view>
+  </view>
+  
   <view class="bg_blur">
     <view class="bg_blur_inner" style="background-image: url('{{imgPath}}')"></view>
   </view>
   <view class="bg_mask"></view>
+
 </view>
