--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -29,7 +29,7 @@
       </view>
      <!-- 热门歌单 -->
       <view class="hot_song_wrap">
-        <text class="list_title">热门歌单</text>
+        <text class="list_title">推荐歌单</text>
         <view class="hot_song_list song_list">
             <view class="hot_song_item song_item" data-idhh="{{item.id}}" bindtap="bindHotSongList" wx:for="{{songList}}" wx:key="sl">
               <image src="{{item.picUrl}}">
