--- a/pages/hot_song_list/hot_song_list.wxml
+++ b/pages/hot_song_list/hot_song_list.wxml
@@ -1,6 +1,8 @@
 <view class="header">
   <view class="header_focus">
-    <view class="logo"></view>
+    <view class="logo">
+      <text>小柴wx：t2425632</text>
+    </view>
     <view class="song_info">
       <image class="ablum_pic" src="{{album}}"></image>
       <view class="txt_info">
@@ -15,7 +17,7 @@
     <view class="play_btn" bindtap="bindPlayBtn"><text>播放全部</text></view>
   </view>
   <view class="bg_blur">
-    <view class="bg_blur_inner"></view>
+    <image class="bg_blur_inner" src='{{album}}'></image>
   </view>
   <view class="bg_mask"></view>
 </view>
